# nom_moteur_librairie

./: .gitignore  README.md  Vector.py  __init__.py  geometry_engine.sublime-project  pyproject.toml  tp_0_ins.py
Mathy/: Vector.py  Vector2.py  __init__.py  homogeneous_vector.py  math_utils.py  matrix2x2.py  matrix3x3.py  renderer.py  triangle.py  vector2.py  vector3.py  vector4.py
Mathy/matrix2x2/: matrix2x2.py
Mathy/triangle/: triangle.py
Mathy/vector2/: vector2.py
tests/: __init__.py  test_matrix.py  test_matrix3x3.py  test_triangle.py  test_vector.py  test_vector3.py
