[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "geometry_engine_librarie"
version = "0.0.0"
description = "Bibliothèque d'objets pour un moteur de géométrie"
authors = [
    { name = "Colin"},
    { name = "Henri"},
    { name = "Leïla"},
    { name = "Loïs"}
]

[tool.flake8]
max-line-length = 79
exclude = ["tests/*"]

[tool.project]
dependencies = [
    "pygame",
    "pytest"
]
